dropdown fixed, page spacing alligned

--- a/src/styles/_appointments.scss
+++ b/src/styles/_appointments.scss
@@ -3,17 +3,17 @@
   font-style: normal;
   font-weight: 600;
   line-height: 1.2;
-  color: #3182FB;
+  color: #3182fb;
   &:hover {
-    color: #3182FB;
+    color: #3182fb;
   }
   &--small {
     @extend .patient-link;
-    font-size: .9rem;
+    font-size: 0.9rem;
     font-weight: 400;
-    color: #01518D;
+    color: #01518d;
     &:hover {
-      color: #01518D;
+      color: #01518d;
     }
   }
 }
@@ -32,10 +32,10 @@
 
 .dashboard-container {
   background: #ffffff;
-  box-shadow: 0 4px .6rem #aeb4c033;
+  box-shadow: 0 4px 0.6rem #aeb4c033;
   outline: none !important;
   overflow-y: hidden;
-  overflow-x: scroll;
+  overflow-x: auto;
 
   .header {
     padding: 1rem;
@@ -160,9 +160,9 @@
 }
 
 .search-icon {
-  position: absolute; 
-  top: .625rem;
-  left: .625rem;
+  position: absolute;
+  top: 0.625rem;
+  left: 0.625rem;
   color: #657396;
   margin: 0.1rem;
   height: 1rem;
@@ -196,7 +196,7 @@
 .btn-load-more {
   flex-grow: 1;
 }
-.date-picker-input{
+.date-picker-input {
   position: relative;
 }
 
